# sector_rotation

./: .gitignore  main.py  notes.md  pyproject.toml
data/: main.py
notebooks/: main.ipynb
notes/: claude_context.md  database.md  feature_candidates.md  features.md  general_notes.md
src/sector_rotation/: config.py  db.py  features.py  fetch.py
